# FileEx-Pro

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: drive.rs  main.rs
src/app/: globals.css  page.tsx
src/types/: Drive.ts
